# health-research-bot

./: Procfile  RAILWAY_DEPLOY.md  README.md  app.py  nixpacks.toml  railway.json  requirements.txt
viral_bot/: .env.example  .gitignore  Procfile  README.md  pyproject.toml  railway.json  requirements.txt
viral_bot/src/viral_bot/: __init__.py  __main__.py  anti_generic.py  caption_writer.py  config.py  content_fetch.py  db.py  dedupe.py  logging_conf.py  main.py  mixer.py  narrative_extractor.py  normalize.py  novelty.py  openai_eval.py  openai_generate.py  primitives.py  scheduler.py  server.py  sheets.py  slide_writer.py  story_generator.py  viral_scorer.py  winners.py
viral_bot/src/viral_bot/sources/: __init__.py  base.py  html.py  pubmed.py  registry.py  rss.py
viral_bot/tests/: __init__.py  test_anti_generic.py  test_mixer.py  test_novelty.py
